--- a/Projects/HolidayTrackerFrontEnd/HolidayTrackerFrontEnd/package.json
+++ b/Projects/HolidayTrackerFrontEnd/HolidayTrackerFrontEnd/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.11.3",
+    "bootstrap-vue": "^2.23.1",
     "cdbreact": "^1.5.18",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
