--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cdbreact": "^1.5.18",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
