--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
     "cdbreact": "^1.5.18",
+    "lodash.isequal": "^4.5.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
