--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-datepicker": "^6.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
