--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,6 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Methods = "GET, POST, DELETE, OPTIONS"
-    Access-Control-Allow-Headers = "Content-Type"
+    Access-Control-Allow-Origin="*"
+    Access-Control-Allow-Methods="GET, POST, DELETE, OPTIONS"
+    Access-Control-Allow-Headers="Content-Type"
