--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amazon-cognito-identity-js": "^6.3.12",
     "bootstrap": "^5.0.0",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue": "^2.23.1",
