--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cdbreact": "^1.5.18",
     "dotenv": "^16.4.5",
     "lodash.isequal": "^4.5.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-icons": "^1.11.4",
